add route /entities/external/{external_id}
